config/samples/ingress-admin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-admin
  namespace: default
  annotations:
    random-annotation: "should-be-preserved"
  labels:
    ipwhitelist-type: "admin"
spec:
  rules:
    - host: admin.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8080
