config/samples/ingress-public.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-public
  namespace: default
  labels:
    ipwhitelist-type: "customerFacing"
spec:
  rules:
    - host: comehackme.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-service
                port:
                  number: 8080
