config/samples/ingress-tooling.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tooling
  namespace: default
  labels:
    ipwhitelist-type: "tooling"
spec:
  rules:
    - host: grafana.website.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metrics-dashboard
                port:
                  number: 8080
